[SG-44b] - End histoire